# bevy_arca

./: Cargo.toml
assets/: demo.hlsl
examples/: box.rs  demo.rs
src/: gpu.rs  handle.rs  lib.rs  pipeline.rs  render_target.rs  renderer.rs  scene.rs  swapchain.rs  triangle.rs
src/core/: mod.rs
src/core/camera/: mod.rs
src/core/image/: mod.rs  sampler.rs
src/core/material/: mod.rs
src/core/mesh/: mod.rs
src/core/mesh_data/: mod.rs
src/core/shader/: mod.rs
src/core/vertex_buffer/: mod.rs
src/gltf/: loader.rs  mod.rs  tree_iterator.rs
src/gpu_types/: mod.rs
src/image/: image.rs  mod.rs
src/material/: mod.rs
src/mesh/: mod.rs
src/plugins/: mod.rs
src/plugins/default_camera_controller/: mod.rs
src/render/: descriptor_heap.rs  drawer.rs  gpu.rs  mod.rs  pipeline.rs  render_target.rs
src/render/constant_buffer/: mod.rs
src/render/mesh_data/: mesh_buffer.rs  mod.rs
src/render/pipelines/: mod.rs  naive_pathtracer.rs
src/win_types/: mod.rs
