[package]
name = "bevy_arca"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { path = "../bevy", default-features = false, features = [
    "bevy_winit",
    "bevy_asset",
    "bevy_scene",
    "bevy_color",
] }
windows = { version = "0.58", features = [
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
] }

gltf = { version = "1.4", features = ["KHR_texture_transform"] }
raw-window-handle = "0.6"
smallvec = "1"
thiserror = "1.0"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
image = { version = "0.25", default-features = false }
num-traits = "0.2"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "box"
path = "examples/box.rs"
